# tsp_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  run.ps1
.cargo/: config.toml
backend/: deno.json  server.ts
backend/input/: BIN.tsp  IN.tsp  LIN.par
backend/output/: OUT.tsp
build-deps/: concorde-build.sh
data/: chase_test.tsp
frontend/: about.html  data.html  data.mjs  index.html  main.js  main.mjs  styles.css  stylesheet.css
frontend/errs/: 404.html  500.html
frontend/js/: bruteforce.mjs  canvas.mjs  reportGenerator.mjs  util_algos.mjs
frontend/jsFiles/: brute.mjs  canvasEffects.mjs  christophides.mjs  globals.mjs  intPlay.mjs  nearesteNeighbor.mjs  onPress.mjs  tests.mjs  util.mjs
output/: OUT.tsp
solver/: .gitignore  Cargo.toml  README.md  build.rs
solver/.cargo/: config.toml
solver/backend/output/: OUT.tsp
solver/src/: edges.rs  main.rs  math.rs  or_opt.rs  precompute.rs  reader.rs  relp.rs  shared.rs
solver/src/cuda/: Cargo.toml
src/: main.rs  math.rs  or_opt.rs  reader.rs  relp.rs  shared.rs
tspRust/: tspRust.vtuneproj
