[package]
name = "tsp_rust"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"


[dependencies]
indicatif = "0.17.11"
kdtree = "0.7.0"
rand = "0.8"
rayon = "1.10.0"
winres = "0.1.12"



[profile.dev]
debug = 2

[profile.release]
split-debuginfo = "packed"

debug = true
debug-assertions = false
overflow-checks = false
panic = 'abort'
strip = false
#Performance stuff
codegen-units = 1
opt-level = 3
lto = "fat"

#Examine accuracy
#rustflags = ["-C", "llvm-args=-enable-unsafe-fp-math"]

